// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup.Radio /> snapshot children 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c7 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:hover ~ .c7 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:active ~ .c7 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #999999;
}

.c4:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1355d0;
}

.c0 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c0 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c0 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0:hover .c3,
.c0:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

.c5 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c5 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c5 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c5:hover .c3,
.c5:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c5 .c1:disabled ~ .c3 {
  background-color: #cccccc;
}

.c5 .c1:checked ~ .c3 {
  border-color: #ff2d4d;
}

.c5 .c1:checked ~ .c3:after {
  background-color: #ff2d4d;
  display: block;
}

.c5 .c1:checked:disabled {
  background-color: #999999;
  border-color: #999999;
}

.c5 .c1:checked:disabled ~ .c3:after {
  background-color: #999999;
}

.c5 .c1:focus ~ .c3 {
  border-color: #999999;
  box-shadow: none;
}

.c5:hover .c3,
.c5:focus .c3 {
  border-color: #999999;
  box-shadow: none;
}

.c5 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

.c6 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c6 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c6 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c6:hover .c3,
.c6:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c6 .c1:checked ~ .c3 {
  border-color: #ff2d4d;
}

.c6 .c1:checked ~ .c3:after {
  background-color: #ff2d4d;
  display: block;
}

.c6 .c1:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c6 .c3 {
  border-color: #ff2d4d;
}

.c6:hover .c3,
.c6:focus .c3 {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c6 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

<label
  className="c0"
  disabled={false}
>
  <input
    className="c1 c2"
    disabled={false}
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <span
    className="c3 c4"
  />
  Foo
</label>
`;

exports[`<RadioGroup.Radio /> snapshot disabled 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c4 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #999999;
}

.c4:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1355d0;
}

.c5 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c5 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c5 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c5:hover .c3,
.c5:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c5 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

.c0 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #999999;
}

.c0 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c0 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c0 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0:hover .c3,
.c0:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0:hover {
  cursor: not-allowed;
}

.c0 .c1:disabled ~ .c3 {
  background-color: #cccccc;
}

.c0 .c1:checked ~ .c3 {
  border-color: #ff2d4d;
}

.c0 .c1:checked ~ .c3:after {
  background-color: #ff2d4d;
  display: block;
}

.c0 .c1:checked:disabled {
  background-color: #999999;
  border-color: #999999;
}

.c0 .c1:checked:disabled ~ .c3:after {
  background-color: #999999;
}

.c0 .c1:focus ~ .c3 {
  border-color: #999999;
  box-shadow: none;
}

.c0:hover .c3,
.c0:focus .c3 {
  border-color: #999999;
  box-shadow: none;
}

.c0 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

<label
  className="c0"
  disabled={true}
>
  <input
    className="c1 c2"
    disabled={true}
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <span
    className="c3 c4"
  />
  Foo
</label>
`;

exports[`<RadioGroup.Radio /> snapshot error 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c7 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:hover ~ .c7 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:active ~ .c7 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #999999;
}

.c4:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1355d0;
}

.c5 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c5 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c5 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c5:hover .c3,
.c5:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c5 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

.c6 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c6 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c6 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c6:hover .c3,
.c6:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c6 .c1:disabled ~ .c3 {
  background-color: #cccccc;
}

.c6 .c1:checked ~ .c3 {
  border-color: #ff2d4d;
}

.c6 .c1:checked ~ .c3:after {
  background-color: #ff2d4d;
  display: block;
}

.c6 .c1:checked:disabled {
  background-color: #999999;
  border-color: #999999;
}

.c6 .c1:checked:disabled ~ .c3:after {
  background-color: #999999;
}

.c6 .c1:focus ~ .c3 {
  border-color: #999999;
  box-shadow: none;
}

.c6:hover .c3,
.c6:focus .c3 {
  border-color: #999999;
  box-shadow: none;
}

.c6 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

.c0 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c0 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c0 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0:hover .c3,
.c0:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0 .c1:checked ~ .c3 {
  border-color: #ff2d4d;
}

.c0 .c1:checked ~ .c3:after {
  background-color: #ff2d4d;
  display: block;
}

.c0 .c1:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c0 .c3 {
  border-color: #ff2d4d;
}

.c0:hover .c3,
.c0:focus .c3 {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c0 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

<label
  className="c0"
  disabled={false}
>
  <input
    className="c1 c2"
    disabled={false}
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <span
    className="c3 c4"
  />
  Foo
</label>
`;

exports[`<RadioGroup.Radio /> snapshot simple 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c5 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:hover ~ .c5 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:active ~ .c5 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #999999;
}

.c4:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1355d0;
}

.c0 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .c1:checked ~ .c3 {
  border-color: #1355d0;
}

.c0 .c1:checked ~ .c3:after {
  background-color: #1355d0;
  display: block;
}

.c0 .c1:focus ~ .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0:hover .c3,
.c0:focus .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c0 .c1:checked:disabled ~ .c3 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #f2f2f2;
}

<label
  className="c0"
  disabled={false}
>
  <input
    className="c1 c2"
    disabled={false}
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <span
    className="c3 c4"
  />
  Foo
</label>
`;
